| Bug #19787 | Online configuration. Node initial restart fails without usefull error message | ||
|---|---|---|---|
| Submitted: | 12 May 2006 22:51 | Modified: | 2 Nov 2006 6:34 |
| Reporter: | Serge Kozlov | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 4.1,5.0,5.1 | OS: | Linux (Linux FC4) |
| Assigned to: | Bugs System | Target Version: | |
[4 Jul 2006 16:54]
Tomas Ulin
can't repeat in latest 5.1 it gives the fllowing error: Time: Tuesday 4 July 2006 - 18:43:33 Status: Permanent error, external action needed Message: Invalid configuration received from Management Server (Configuration error) Error: 2350 Error data: Illegal configuration change. Initial start needs to be performed when changing no of replicas (2 != 1) Error object: DBDIH (Line: 3834) 0x0000000a Program: ../../storage/ndb/src/kernel/ndbd Pid: 18126 Trace: /home/tomas/mysql-5.1-ndb/mysql-test/ndbcluster-1186/ndb_1_trace.log.1 Version: Version 5.1.12
[5 Jul 2006 15:06]
Serge Kozlov
Got an error like that: Time: Wednesday 5 July 2006 - 15:05:03 Status: Temporary error, restart node Message: Internal program error (failed ndbrequire) (Internal error, programming error or missing error message, please report a bug) Error: 2341 Error data: dbdih/DbdihMain.cpp Error object: DBDIH (Line: 6696) 0x0000000e Program: /home/ndbdev/skozlov/builds/libexec/ndbd Pid: 4125 Trace: /space/run/ndb_2_trace.log.1 Version: Version 5.1.12 (beta) ***EOM***
[5 Jul 2006 19:30]
Tomas Ulin
ok critical info I did not see was "-I" :)
[14 Sep 2006 3:37]
li zhou
can't repeat in 4.1
[14 Sep 2006 4:48]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/11902 ChangeSet@1.2257, 2006-09-14 10:54:20+00:00, lzhou@dev3-138.dev.cn.tlan +1 -0 BUG#19787 Modify correct message when some important variables are changed but cannot be applied by online
[14 Sep 2006 8:28]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/11913 ChangeSet@1.2257, 2006-09-14 14:34:06+00:00, lzhou@dev3-138.dev.cn.tlan +1 -0 BUG#19787 Modify correct message when some important variables are changed but cannot be applied by online
[10 Oct 2006 20:29]
Jonas Oreland
pushed into 5.1.12
[11 Oct 2006 9:50]
li zhou
Fixed in 5.1.12
[1 Nov 2006 15:36]
Jonas Oreland
pushed into 5.0.29 no fix in 4.1
[2 Nov 2006 6:34]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix for 5.0.29 & 5.1.12.
[4 Nov 2006 4:11]
Jon Stephens
*Fix for 5.0 documented in 5.0.30 Release Notes.*

Description: Change NoOfReplicas to another correct value (e.g. from 2 to 1 for 2 data nodes) on empty cluster and try to apply new configuration in online ("online" means following: modify config.ini, stop ndb_mgmd, start ndb_mgmd, restart all data nodes). Error message for case above likes that: Current byte-offset of file-pointer is: 568 Time: Friday 12 May 2006 - 22:35:53 Status: Temporary error, restart node Message: Internal program error (failed ndbrequire) (Internal error, programming error or missing error message, please report a bug) Error: 2341 Error data: dbdih/DbdihMain.cpp Error object: DBDIH (Line: 6622) 0x0000000e Program: /home/ndbdev/skozlov/builds/libexec/ndbd Pid: 11401 Trace: /space/run/ndb_2_trace.log.1 Version: Version 5.1.10 (beta) ***EOM*** How to repeat: 1. Create config.ini 2 ndbd nodes and NoOfRepicas=2 (and 1 mgmd, 1 mysqld) 2. Start cluster and don't load any data. In other word cluster is "empty". 3. Change NoOfRepicas=1 in config.ini 4. Stop ndb_mgmd 5. Start ndb_mgmd (new value NoOfRepicas applied) 6. Restart data node with initial (X RESTART -I) 7. Look at error_log. Suggested fix: Use a correct error message if some important variables are changed but cannot be applied by online.