BUG#19787 Modify correct message when some important variables are changed but cannot be applied by online

ndb/src/kernel/blocks/dbdih/DbdihMain.cpp:
  Modify error message when illegal configuration changed.